--- a/package.json
+++ b/package.json
@@ -1,11 +1,31 @@
 {
+  "name": "earth-globe-animation",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "gsap": "^3.12.2",
-    "lil-gui": "^0.18.2",
-    "three": "^0.157.0",
-    "vite": "^4.4.9"
+    "@react-three/drei": "^9.86.3",
+    "@react-three/fiber": "^8.14.4",
+    "@types/three": "^0.156.0",
+    "next": "13.5.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "three": "^0.157.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
