--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.86.3",
     "@react-three/fiber": "^8.14.4",
     "@types/three": "^0.156.0",
+    "gsap": "^3.12.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
