--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.86.3",
-    "@react-three/fiber": "^8.14.4",
     "@types/three": "^0.156.0",
     "gsap": "^3.12.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-globe.gl": "^2.25.0",
     "three": "^0.157.0"
   },
   "devDependencies": {
